# super-bowl-ai-tracker

./: .env.example  .gitignore  README.md  find_super_bowl.py  pyproject.toml  requirements.txt
app/: __init__.py  ai_engine.py  assets.py  config.py  data_sources.py  game_logic.py  main.py  persist.py  store.py
app/templates/: index.html
demo_data/: demo_events.json
